2008-09-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-dnd.c: improved the new DND code.

2008-09-04  Tor Lillqvist  <tml@novell.com>

	* app/base/base-utils.h
	* app/base/base-utils.c: The return type of get_pid() should be
	gint, not GPid. This matches also the C library on Windows, in
	which the return type of getpid() is int, not a pointer or
	intptr_t. The use for GPid in the GLib API is as a "handle" to a
	descendant processes, returned by the g_spawn_*() functions, and
	passed to the g_child_watch_*() functions, not as a "process
	identifier".

	* tools/gimptool.c: Make it compile without warnings also with gcc
	-Wwrite-strings. Use cmd.exe instead of command.com to execute the
	COPY and DEL commands on Windows.

2008-09-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-dnd.c
	(gimp_display_shell_drop_drawable) (gimp_display_shell_drop_pixbuf):
	handle drops on the empty image window.

2008-09-04  Sven Neumann  <sven@gimp.org>

	* app/dialogs/keyboard-shortcuts-dialog.c: tweaked spacing between
	entry and button and resolved a mnemnic conflict.

2008-09-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpactionview.[ch]: add a column for the casefold
	label of the action and filter on that.

	* app/dialogs/keyboard-shortcuts-dialog.c: add a button to clear
	the filter entry. Changed the label to "Search:".

2008-09-04  Michael Natterer  <mitch@gimp.org>

	* plug-ins/gfig/gfig-dobject.h
	* plug-ins/gfig/gfig-style.c: some more const.

2008-09-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpactionview.[ch]: add a GtkTreeModelFilter
	between the GtkTreeView and the actual GtkTreeStore. Add API to
	set the filter which is simply a string that's matched with
	strstr(). Quite some things improvable here...

	* app/dialogs/keyboard-shortcuts-dialog.c: add a "Filter" entry
	and set the filter on the action view.

2008-09-04  Sven Neumann  <sven@gimp.org>
